Fixed-19371: Attribute Heading border misaligned. #19371

--- a/app/design/adminhtml/Magento/backend/web/css/source/forms/_temp.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/forms/_temp.less
@@ -11,7 +11,7 @@
 .admin__fieldset-wrapper-title {
     &:extend(.abs-clearfix all);
     border-bottom: 1px solid @color-gray80;
-    line-height: 1.2;
+    line-height: 1.4;
     margin-bottom: 0;
     padding: 14px 0 16px;
 
